logging_chrome: remove log file extension in the right place

An earlier commit needlessly ruined GenerateTimestampedName()
making it indiscriminately remove extensions.  The extension-chopping
code is being put in the right place (at the caller site).

BUG=chromium:781363
TEST=none

Change-Id: Ic0edf8e082ce9af34b6679bec179e76e8f4797dc