chrome/common/logging_chrome.cc
@@ -193,7 +193,10 @@ base::FilePath SetUpSymlinkIfNeeded(const base::FilePath& symlink_path,
   base::FilePath target_path;
   bool symlink_exists = base::PathExists(symlink_path);
   if (new_log || !symlink_exists) {
-    target_path = GenerateTimestampedName(symlink_path, base::Time::Now());
+    base::FilePath bare_path = symlink_path;
+    // Remove any extension before time-stamping.
+    bare_path = bare_path.ReplaceExtension("");
+    target_path = GenerateTimestampedName(bare_path, base::Time::Now());
 
     if (symlink_exists) {
       base::FilePath previous_symlink_path =
@@ -417,11 +420,6 @@ base::FilePath GenerateTimestampedName(const base::FilePath& base_path,
                                        base::Time timestamp) {
   base::Time::Exploded time_deets;
   timestamp.LocalExplode(&time_deets);
-  base::FilePath new_path = base_path;
-  // Assume that the base_path is "chrome.LATEST", and remove the extension.
-  // Ideally we would also check the value of base_path, but we cannot reliably
-  // log anything here, and aborting seems too harsh a choice.
-  new_path = new_path.ReplaceExtension("");
   std::string suffix = base::StringPrintf("_%02d%02d%02d-%02d%02d%02d",
                                           time_deets.year,
                                           time_deets.month,
@@ -429,7 +427,7 @@ base::FilePath GenerateTimestampedName(const base::FilePath& base_path,
                                           time_deets.hour,
                                           time_deets.minute,
                                           time_deets.second);
-  return new_path.InsertBeforeExtensionASCII(suffix);
+  return base_path.InsertBeforeExtensionASCII(suffix);
 }
 #endif  // defined(OS_CHROMEOS)
 
