chrome/browser/logging_chrome_unittest.cc
@@ -7,9 +7,11 @@
 #include "base/command_line.h"
 #include "base/environment.h"
 #include "base/files/file_path.h"
+#include "base/files/file_util.h"
 #include "chrome/common/env_vars.h"
 #include "chrome/common/logging_chrome.h"
 #include "content/public/common/content_switches.h"
+#include "testing/gmock/include/gmock/gmock-matchers.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
 class ChromeLoggingTest : public testing::Test {
@@ -35,7 +37,17 @@ class ChromeLoggingTest : public testing::Test {
     cmd_line_.AppendSwitchASCII(switches::kLogFile, value);
   }
 
+  void SetUpSymlinkCleanUp() {
+    base::DeleteFile(bare_symlink_path_, /* recursive = */ false);
+    base::DeleteFile(latest_symlink_path_, /* recursive = */ false);
+    base::DeleteFile(previous_symlink_path_, /* recursive = */ false);
+  }
+
   const base::CommandLine& cmd_line() { return cmd_line_; }
+
+  base::FilePath bare_symlink_path_;
+  base::FilePath latest_symlink_path_;
+  base::FilePath previous_symlink_path_;
 
  private:
   std::string environment_filename_;  // Saves real environment value.
@@ -86,3 +98,75 @@ TEST_F(ChromeLoggingTest, EnvironmentAndFlagLogFileName) {
 
   RestoreEnvironmentVariable();
 }
+
+#if defined(OS_CHROMEOS)
+TEST_F(ChromeLoggingTest, TimestampedName) {
+  base::FilePath path = base::FilePath(FILE_PATH_LITERAL("xy.zzy"));
+  base::FilePath timestamped_path =
+      logging::GenerateTimestampedName(path, base::Time::Now());
+  EXPECT_THAT(timestamped_path.value(),
+              ::testing::MatchesRegex("^xy_\\d+-\\d+\\.zzy$"));
+}
+
+TEST_F(ChromeLoggingTest, SetUpSymlink) {
+  base::FilePath target_path;
+  base::FilePath latest_target_path;
+  bare_symlink_path_ = base::FilePath(FILE_PATH_LITERAL("chrome-test-log"));
+  latest_symlink_path_ =
+      base::FilePath(FILE_PATH_LITERAL("chrome-test-log.LATEST"));
+  previous_symlink_path_ =
+      base::FilePath(FILE_PATH_LITERAL("chrome-test-log.PREVIOUS"));
+
+  // First clean up, just in case.
+  SetUpSymlinkCleanUp();
+
+  // Start from a legacy situation, where "chrome-test-log" is a symlink
+  // pointing to the latest log, which has a time-stamped name from a while
+  // ago.
+  base::FilePath old_target_path = logging::GenerateTimestampedName(
+      bare_symlink_path_, base::Time::UnixEpoch());
+
+  ASSERT_TRUE(base::CreateSymbolicLink(old_target_path, bare_symlink_path_));
+
+  // Call the testee with the new symlink path, as if starting a new session.
+  bool start_new_log = true;
+  logging::SetUpSymlinkIfNeeded(latest_symlink_path_, start_new_log);
+
+  // We now expect:
+  //
+  // chrome-test-log --> chrome-test-log.LATEST
+  // chrome-test-log.LATEST --> <new time-stamped path>
+  // no chrome-test-log.PREVIOUS on the legacy transition.
+  ASSERT_TRUE(base::ReadSymbolicLink(bare_symlink_path_, &target_path));
+  EXPECT_EQ(target_path.value(), latest_symlink_path_.value());
+
+  ASSERT_TRUE(
+      base::ReadSymbolicLink(latest_symlink_path_, &latest_target_path));
+  EXPECT_NE(latest_target_path.value(), old_target_path.value());
+  EXPECT_THAT(latest_target_path.value(),
+              ::testing::MatchesRegex("^chrome-test-log_\\d+-\\d+$"));
+
+  // Simulate one more session cycle.
+  start_new_log = true;
+  logging::SetUpSymlinkIfNeeded(latest_symlink_path_, start_new_log);
+
+  // We now expect:
+  //
+  // chrome-test-log.PREVIOUS --> <previous target of chrome-test-log.LATEST>
+  //
+  // We also expect that the .LATEST file is now pointing to a file with a
+  // newer time stamp.  Unfortunately it's probably not newer enough to tell
+  // the difference since the time stamp granularity is 1 second.
+  ASSERT_TRUE(base::ReadSymbolicLink(previous_symlink_path_, &target_path));
+  EXPECT_EQ(target_path.value(), latest_target_path.value());
+
+  ASSERT_TRUE(
+      base::ReadSymbolicLink(latest_symlink_path_, &latest_target_path));
+  EXPECT_THAT(latest_target_path.value(),
+              ::testing::MatchesRegex("^chrome-test-log_\\d+-\\d+$"));
+
+  // Clean up again.
+  SetUpSymlinkCleanUp();
+}
+
+#endif  // OS_CHROMEOS
